# test-rig-control-model

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.CFF  FST.mplstyle  Pump_coefficients.ipynb  README.md  SUPERVISOR_CHECKLIST.md  pyproject.toml  real_pump_coeffs.ipynb  requirements.txt
docs/: Getting Started.rst  conf.py  index.rst
notebooks/: constant_operating_point_3536_50.ipynb  constant_operating_point_3536_50_with_tank.ipynb  constant_operating_point_3536_75.ipynb  constant_operating_point_4167_75.ipynb  consumer_flow_model.ipynb  consumer_flow_valve.ipynb  ewcm_kevin.ipynb  ewcm_kevin_old.ipynb  old_constant_operating_point_3536_50.ipynb  operator_flow_pump.ipynb  operator_flow_pump_tank.ipynb  operator_flow_pump_tank_connected.ipynb  operator_flow_pump_tank_valve.ipynb  operator_flow_pump_tank_valve_connected.ipynb  operator_flow_refactored.ipynb  operator_flow_refactored_model_imported.ipynb  operator_flow_refactored_with_scaling.ipynb  plot_experimental_results.ipynb  plots.ipynb  pump_curves.ipynb  pump_filling_tank_3536_50.ipynb  pump_filling_tank_4166_50.ipynb  pump_speedup_3536_to_41 copy.ipynb  pump_speedup_3536_to_41.ipynb  syste_characteristics.ipynb  valve_closure_3536_75to_50.ipynb  valve_closure_3536_75to_50_5s.ipynb  valve_closure_3536_75to_50_with_tank.ipynb  zeng_net.ipynb
python-project-template/: module.py
python_project_template/: __init__.py
test_rig_control_model/: __init__.py  common.py  ewcmde.py
tests/: test_string_reverse.py
