[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python_project_template"
dynamic = ["version"]
description = "This project does this and that."
readme = "README.md"
authors = [
    { name = "Some Author", email = "some.author@tu-darmstadt.de" }
]
keywords = ["FST", "engineering"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
"numpy",
"pandas",
"matplotlib",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black>=22.8.0",
    "isort>=5.8.0",
    "pylint>=2.15.3"
    ]
test = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "mypy>=0.971",
    "pandas-stubs>=1.4.3.220822",
    "types-tqdm>=4.64.5",
    "types-pytz>=2022.2.1.0"
    ]
doc = ["sphinx>=5.1.1", "sphinx-rtd-theme>=1.0.0", "sphinx-autoapi",]

[project.urls]
repository = "https://git.rwth-aachen.de/path-to-project"
documentation = "https://path-to-project.readthedocs.io/en/latest/"

[tool.setuptools.dynamic]
version = {attr = "python_project_template.__version__"} # this is the module; must contain an __init__.py file with __version__ in the header

[tool.setuptools.packages.find]
where = ["."]


[tool.mypy]
strict = true
show_error_codes = true
[[tool.mypy.overrides]]
module = [
    "matplotlib",
    "matplotlib.axes",
    "matplotlib.pyplot",
    "OMPython"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    # flake8-bugbear: finding likely bugs and design problems in your program. 
    "B",
    # flake8-simplify: simplify your code.
    "SIM",
    # PEP8 naming
    # "N",
    # pydocstyle
    # "D",
]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"
