[project]
name = "test-rig-control-model"
version = "0.1.0"
description = "Control model for resilience test rig"
authors = [
    {name = "Kevin Logan",email = "kevin.logan@tu-darmstadt.de"}
]

readme = "README.md"
requires-python = "==3.12.1"
dependencies = [
    "numpy (>=1.21,<2.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "wntr (>=1.3.2,<2.0.0)",
    "networkx (>=3.5,<4.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pandas-stubs = "^2.3.2.250926"
types-tqdm = "^4.67.0.20250809"
types-pytz = "^2025.2.0.20250809"
pre-commit = "^4.3.0"
nb-clean = "^4.0.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autoapi = "^3.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
